2005-08-23  Kristian Høgsberg  <krh@redhat.com>

	* AUTHORS: 
	* README: More minor edits.

2005-08-23  Billy Biggs  <vektor@dumbterm.net>

	* README: Minor edits.

2005-08-23  Billy Biggs  <vektor@dumbterm.net>

	* doc/public/tmpl/cairo-matrix.sgml: Update the long description
	of cairo_matrix_t to match the current sources.
	* doc/public/tmpl/cairo-paths.sgml: Add cairo_path_data_t.
	* src/cairo-ft-font.c:
	* src/cairo-path-data.c:
	* src/cairo-pattern.c:
	* src/cairo.c:
	* src/cairo.h: Some documentation updates and improvements.

2005-08-23  Carl Worth  <cworth@cworth.org>

	* test/.valgrind-suppressions: Add suppression for uninitialized
	data in fbBltOne.

2005-08-23  Carl Worth  <cworth@cworth.org>

	* README: Big update in preparation for 1.0.

2005-08-23  Carl Worth  <cworth@cworth.org>
	
	* AUTHORS: Added several names to the AUTHORS file (since
	2005-01-24):

	Josh Aas <joshmoz@gmail.com>
	Billy Biggs <vektor@dumbterm.net>
	Damien Carbery <damien.carbery@sun.com>
	Steve Chaplin <stevech1097@yahoo.com.au>
	Tomasz Cholewo <cholewo@ieee-cis.org>
	John Ehresman <jpe@wingide.com>
	Behdad Esfahbod <behdad@behdad.org>
	Bertram Felgenhauer <int-e@gmx.de>
	J. Ali Harlow <ali@avrc.city.ac.uk>
	Adrian Johnson <ajohnson@redneon.com>
	Michael Johnson <ahze@ahze.net>
	Øyvind Kolås <pippin@freedesktop.org>
	Martin Kretzschmar <martink@gnome.org>
	Tor Lillqvist <tml@novell.com>
	Luke-Jr <luke-jr@utopios.org>
	Jeff Muizelaar <jeff@infidigm.net>
	Peter Nilsson <c99pnn@cs.umu.se>
	Geoff Norton <gnorton@customerdna.com>
	Robert O'Callahan <rocallahan@novell.com>
	Mike Owens <etc@filespanker.com>
	Stuart Parmenter <pavlov@pavlov.net>
	Tim Rowley <tim.rowley@gmail.com>
	Jason Dorje Short <jdorje@users.sf.net>
	Travis Spencer <tspencer@cs.pdx.edu>
	Malcolm Tredinnick <malcolm@commsecure.com.au>

2005-08-23  Billy Biggs  <vektor@dumbterm.net>

	* doc/public/cairo-docs.xml: Experimental Quartz and XCB
	backends removed from the public doc for now.
